--- a/estilo.css
+++ b/estilo.css
@@ -32,6 +32,10 @@ a {
     text-align: center;
 }
 
+.img-campanha {
+    border: 10px solid #c3c3ae;
+}
+
 h1 {
     color: #828271;
     font-size: 1.2em;
